# project-root

./: .gitignore  .gitmodules  README.md  README.th.md  add.json  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/data/: reviews.index  reviews.jsonl
backend/spfresh/: Cargo.toml  build.rs
backend/spfresh-sys/: Cargo.toml  build.rs
backend/spfresh-sys/src/: lib.rs
backend/spfresh/src/: lib.rs  spfresh.cpp
backend/spfresh_local/: Cargo.toml
backend/spfresh_local/src/: lib.rs  spfresh.cpp
backend/src/: bulk_insert.rs  embed.rs  error.rs  handlers.rs  lib.rs  main.rs
backend/src/storage/: metadata.rs  mod.rs  vector_store.rs
frontend/: Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  style.css
frontend/src/: lib.rs  main.rs
