[package]
autobins = false
name = "frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.6", default-features = false, features = ["csr"] }
leptos_meta = { version = "0.6", default-features = false, features = ["csr"] }
leptos_router = { version = "0.6", default-features = false, features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = "0.6"
gloo-file = { version = "0.2", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_log = "1"
log = "0.4"
thiserror = "1"

[lib]
crate-type = ["cdylib"]
